<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="prism_dashboard_title">Prism</string>
    <string name="prism_dashboard_summary">Prefect on every angle !!</string>
    <string name="prism_lockscreen_dashboard_title">LockScreen</string>
    <string name="prism_themes_dashboard_title">Themes</string>
    <string name="prism_statusbar_dashboard_title">StatusBar</string>
    <string name="prism_qs_dashboard_title">Quick Settings</string>
    <string name="prism_system_dashboard_title">System</string>
    <string name="themes_title">Themes</string>
    <string name="prismatic_summary">Design your icons, themes, colour</string>
    <string name="lockscreen_title">Lock Screen</string>
    <string name="lockscreen_summary">Customised your LockScreen</string>
    <string name="quick_settings_title">Control Center</string>
    <string name="quick_settings_summary">Customised QuickSettings</string>
    <string name="status_title">Status Bar</string>
    <string name="status_summary">Tuner, Battery, Logos</string>
    <string name="system_dashboard_summary">System Setting</string>
    <string name="prism_spoofing_dashboard_title">Spoofing</string>
    <string name="spoofing_dashboard_summary">Spoofing releated Settings</string>
     <string name="about_title">euclidOS</string>
    <string name="about_summary">About our ROM</string>
    <string name="ok">OK</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="default_string">Default</string>
    <string name="disabled">Disabled</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="about_info">euclidOS is a custom ROM focused on minimalism, stability, and security. It delivers a clean, bloat-free experience with reliable performance and enhanced privacy for everyday users.</string>
    <string name="about_website_title">Website</string>
    <string name="about_website_summary">Visit our site for updates</string>
    <string name="about_github_title" translatable="false">GitHub</string>
    <string name="about_github_summary">Browse our code on GitHub</string>
    <string name="about_founders_title">Founders</string>
    <string name="about_founder_1_title" translatable="false">Mrick343</string>
    <string name="about_founder_1_summary" translatable="false">Founder / Lead Developer</string>
    <string name="spoofing_title">Spoofing</string>
    <string name="spoofing_summary">Bypass app restrictions by spoofing components</string>
    <string name="spoofing_system_wide_category">System-Wide</string>
    <string name="spoofing_pixel_props_title">Pixel props</string>
    <string name="spoofing_pixel_props_summary">Spoof a select group of Google apps to the latest Pixel device</string>
    <string name="tensor_spoof_title">Spoof tensor features</string>
    <string name="tensor_spoof_summary">Unlock tensor/pixel features</string>
    <string name="gms_spoof_title">Play Integrity fix</string>
    <string name="gms_spoof_summary">Spoof your device to pass Google Play Attestation (not applicable to sandboxed gapps)</string>
    <string name="spoofing_app_specific_category">App-Specific</string>
    <string name="spoofing_vending_title">Play Store spoof</string>
    <string name="spoofing_vending_summary">Spoof the Play Store to the latest Pixel device</string>
    <string name="spoofing_photos_title">Google Photos spoof</string>
    <string name="spoofing_photos_summary">Spoof the Google Photos app as a Pixel XL</string>
    <string name="spoofing_snap_title">Snapchat spoof</string>
    <string name="spoofing_snap_summary">Spoof Snapchat as a Pixel XL to fix possible chat issues</string>
    <string name="toast_spoofing_success">Successfully downloaded pif.json. Spoofing as %1$s for Play Integrity.</string>
    <string name="toast_spoofing_failure">Failed to spoof properties.</string>
    <string name="update_pif_json_title">Update Play Integrity fix</string>
    <string name="update_pif_json_summary">Update PIF spoofing device, requires internet connection.</string>
    <string name="show_pif_properties_title">Play Integrity fix properties</string>
    <string name="show_pif_properties_summary">Show all currently set PIF properties</string>
    <string name="error_loading_properties">Error loading PIF properties</string>
    <string name="pif_spoofing_title">Select PIF JSON file</string>
    <string name="pif_spoofing_summary">Choose the PIF JSON file to be used to spoof Play Integrity</string>
    <string name="gameprops_title">Enable per-app game spoof</string>
    <string name="gameprops_summary">Enables per-app game spoofing options</string>
    <string name="gameprops_load_json_title">Select per-app game props JSON file</string>
    <string name="gameprops_load_json_summary">Choose the JSON file to be used to spoof more games</string>
    <string name="keybox_data_title">Select keybox XML file</string>
    <string name="keybox_data_summary">Choose the keybox XML file to spoof key attestation system-wide for all apps. Click the delete button to remove the keybox data and disable spoofing</string>
    <string name="power_menu_title">Power menu</string>
    <string name="power_menu_title_summary">View or change power menu entries</string>
    <string name="global_actions_title">Power menu items</string>
    <string name="global_actions_screenshot">Screenshot</string>
    <string name="global_actions_on_the_go">On-The-Go mode</string>
    <string name="global_actions_power">Power</string>
    <string name="global_actions_advanced">Advanced reboot options</string>
    <string name="global_actions_restart">Restart</string>
    <string name="global_actions_airplane">Airplane</string>
    <string name="global_actions_settings">Settings</string>
    <string name="global_actions_lockdown">Lockdown</string>
    <string name="global_actions_users">Users</string>
    <string name="global_actions_logout">Logout</string>
    <string name="global_actions_emergency">Emergency</string>
    <string name="global_actions_device_controls">Device controls</string>
    <string name="global_actions_bugreport">Bug report</string>
    <string name="button_title">Buttons</string>
    <string name="themes_monet_title">Monet settings</string>
    <string name="monet_settings_title">Theming settings</string>
    <string name="monet_settings_sammary">A few extra settings to customize monet engine</string>
    <string name="theme_style_title">Theme style</string>
    <string name="theme_style_tonal_spot">Tonal Spot (Default)</string>
    <string name="theme_style_vibrant">Vibrant</string>
    <string name="theme_style_expressive">Exspressive</string>
    <string name="theme_style_spritz">Spritz</string>
    <string name="theme_style_rainbow">Rainbow</string>
    <string name="theme_style_fruit_salad">Fruit Salad</string>
    <string name="theme_style_muted">Muted</string>
    <string name="theme_style_content">Content</string>
    <string name="color_source_title">Color source</string>
    <string name="color_source_both">Both (Default)</string>
    <string name="color_source_home">Home wallpaper</string>
    <string name="color_source_lock">Lock wallpaper</string>
    <string name="color_source_preset">Preset</string>
    <string name="accent_color_title">Accent Color</string>
    <string name="accent_color_summary">Override default accent color</string>
    <string name="accent_background_title">Accent background</string>
    <string name="accent_background_summary">Choose a different accent color for background</string>
    <string name="bg_color_title">Background Color</string>
    <string name="bg_color_summary">Override default background accent color</string>
    <string name="luminance_factor_title">Luminance</string>
    <string name="luminance_factor_summary">Higher values produce brighter colors</string>
    <string name="chroma_factor_title">Chroma</string>
    <string name="chroma_factor_summary">Higher values produce stronger colors</string>
    <string name="tint_background_title">Tint Background</string>
    <string name="tint_background_summary">Make Luminance and Chroma selection affect background colors as well</string>
    <string name="smart_pixels_warning_text">Smart pixels is a power saving feature. Depending on how many pixels you decide to turn off, you could see improvement in battery life. Note that in some cases it can result in unresponsive areas on touch screen</string>
    <string name="smart_pixels_title">Smart Pixels</string>
    <string name="smart_pixels_summary">Save battery by shutting off extra pixels</string>
    <string name="smart_pixels_enable_title">Enable Smart Pixels</string>
    <string name="smart_pixels_enable_summary">Shut off pixels to reduce power consumption</string>
    <string name="smart_pixels_on_power_save_title">Auto-enable on battery saver</string>
    <string name="smart_pixels_on_power_save_summary">Enable Smart Pixels when battery saver is enabled</string>
    <string name="smart_pixels_percent">Percent of pixels to disable</string>
    <string name="smart_pixels_shift_title">Burn-in protection</string>
    <string name="smart_pixels_shift_summary">Prevents burn-in on OLED devices by shifting pixels every so often</string>
    <string name="custom_timeout_summary_never">Never</string>
    <string name="custom_timeout_summary_5secs">5 seconds</string>
    <string name="custom_timeout_summary_10secs">10 seconds</string>
    <string name="custom_timeout_summary_15secs">15 seconds</string>
    <string name="custom_timeout_summary_30secs">30 seconds</string>
    <string name="custom_timeout_summary_1min">1 minute</string>
    <string name="custom_timeout_summary_2mins">2 minutes</string>
    <string name="custom_timeout_summary_5mins">5 minutes</string>
    <string name="custom_timeout_summary_10mins">10 minutes</string>
    <string name="custom_timeout_summary_20mins">20 minutes</string>
    <string name="custom_timeout_summary_30mins">30 minutes</string>
    <string name="custom_timeout_summary_1hour">1 hour</string>
    <string name="custom_timeout_summary_2hours">2 hours</string>
    <string name="custom_timeout_summary_4hours">4 hours</string>
    <string name="custom_timeout_summary_8hours">8 hours</string>
    <string name="battery_settings_title">Battery Settings</string>
    <string name="battery_options">Battery</string>
    <string name="battery_style_title">Battery Style</string>
    <string name="battery_style_port">Portrait</string>
    <string name="battery_style_circle">Circle</string>
    <string name="battery_style_landscape">Landscape</string>
    <string name="battery_style_landscape_reversed">Landscape (reversed)</string>
    <string name="battery_style_text">Text</string>
    <string name="battery_percent_title">Show percent</string>
    <string name="battery_percent_summary">Always show the battery percent with the icon</string>
    <string name="visualizer_pulse">Pulse Visualizer</string>
    <string name="visualizer_pulse_summary">Show a bar visualizer on the lock screen while music is playing</string>
    <string name="visualizer_pulse_rounded_bars_title">Rounded bars</string>
    <string name="visualizer_pulse_rounded_bars_summary">Display visualizer bars with rounded corners</string>
    <string name="visualizer_pulse_color">Visualizer color</string>
    <string name="visualizer_pulse_bar_count_title">Number of bars</string>
    <string name="visualizer_pulse_bar_count_summary">Set how many bars are shown in the visualizer</string>
    <string name="visualizer_pulse_color_lavalamp">Lavalamp</string>
    <string name="visualizer_pulse_color_album">Album art</string>
    <string name="visualizer_pulse_color_accent">Accent color</string>
    <string name="pulse_help_policy_notice_title">About Pulse</string>
</resources>